--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
+  <base href="/">
   <meta charset="utf-8">
   <title>BowlingApp</title>
-  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -15,6 +15,12 @@
   <link rel="stylesheet" href="/assets/css/custom.css">
   <!--Fonts-->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+  <!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 
